stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_list_get_oob.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/list_get_oob.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × list_get index out of bounds
   ╭─[tests/fixtures/diagnostics/types/list_get_oob.ml:2:7]
 1 │ fn main() {
 2 │   dbg(list_get([1], 1))
   ·       ────────┬───────
   ·               ╰── `list_get` index 1 is outside this list of length 1
 3 │ }
   ╰────
  help: use an index that exists in the list
